--- a/steps.html
+++ b/steps.html
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body>
-    <form action="C:\Users\Admin\Desktop\2048 slide game\indexkirubs.html">
+    <form action="C:\Users\Admin\Desktop\2048 slide game\index.html">
         <button class="kk" type="submit">Start game</button>
        </form>
        <h1 class="Heading">2048  SLIDE  GAME  </h1>
