--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             font-size: 16px;
             float: right;
             margin-top: 40%;
-            margin-right: 10%;            
+            margin-right: 8%;            
             cursor: pointer;
             border-radius: 20px;
             font-weight:bolder; 
@@ -88,12 +88,20 @@
           text-transform: uppercase;
           font-family: Georgia;
         }
+        .arr{
+          color: aliceblue;
+          padding-top: 42%;
+          display: flex;
+          padding-left: 40%;
+          font-size: 27px;
+        }
     </style>
   </head>
   <body>
     <button class="button" onclick="refreshPage()" >New game</button>
   <h2 class="Heading">2048  slide  game  Using </h2>
   <h2 class="Head">BEST FIRST SEARCH </h2>
+  <h3 class="arr">Use ARROW keys!!!</h3>
     <div class="gameBoard">
     <div id="game-board" class="game-board"></div>
     </div>
