--- a/steps.html
+++ b/steps.html
@@ -22,7 +22,7 @@
             font-family: 'Segoe UI'; 
       }
        body{
-        background-image:url(2143.jpg);
+        background-image:url(./assets/2143.jpg);
         background-size: cover; 
 	      background-repeat: no-repeat;
 	      background-attachment: fixed;
